1999-03-19  Vladimir Jojic  <vjojic@wupatki.santafe.edu>

	* directory.m (create_class_refs): Create class reference
	for primitive type void.

1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JINSTANTIATE, JSWITCHUPDATE): New macros.

	* directory.[hm] (java_directory_switchupdate,
	java_directory_switchupdate_java, java_instantiate): New functions.

1999-03-18  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (create_class_refs): Modify find to return primitive
	type class instead of the java.lang wrapper.
	
1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): Initialize globalZone via
	static field lookup in SwarmEnvironment class.

	* SwarmEnvironment.m: Include swarmconfig.h (for VERSION).
	(Java_swarm_SwarmEnvironment_initSwarm): 
	Renamed from Java_SwarmEnvironment_initSwarm.
	Fix off-by-one argv/argc problem. 
	Initialize argv[0] to "javaswarm".  Use initSwarmApp instead
	of initSwarm.

	* directory.m (create_class_refs): c_int is an Integer, not an Int.

	* Makefile.in: Split stubs and support code into two shared libraries.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.m: Include defobj.h instead of defobj/FCall.h.
	(Java_SwarmEnvironment_initSwarm): 
	Use renamed init_javacall_tables; defobj_init_java_call_tables.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm_la_OBJECTS): Add SwarmEnvironment.lo.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.m (Java_SwarmEnvironment_initSwarm): Add 
	calls to java_directory_init and init_javacall_tables.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JUPDATE): New macro.
	(JADD): Remove.

	* directory.[hm] (java_directory_init): Add jniEnv argument.
	(java_directory_update, java_directory_update_java): New functions.

	* setup.c: Remove initialize constructor.
